<resources>
    <string name="app_name">Pixar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="retry">RETRY</string>
    <string name="results_could_not_be_loaded">Results could not be loaded</string>
    <string name="further_results_could_not_be_loaded">Further results could not be loaded</string>
    <string name="search">Search</string>
    <string name="no_results_found">No Results Found</string>
    <string name="no_connection">No Connection</string>
    <string name="wallpaper">wallpaper</string>
    <string name="an_error_occurred">An error occurred</string>
    <string name="download">Download</string>
    <string name="save">SAVE</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s,</string>
    <string name="photo_by">Photo by -</string>
    <string name="unsplash">UnSplash</string>
    <string name="pixabay">Pixabay</string>
    <string name="loading">Loading…</string>
    <string name="open_options">open options</string>
    <string name="pick_quality">Pick Quality</string>
    <string name="normal_resolution">Normal Resolution</string>
    <string name="high_resolution">High Resolution</string>
    <string name="cancel">Cancel</string>
    <string name="choose_action">Set Wallpaper As</string>
    <string name="home_screen">Home Screen</string>
    <string name="lock_screen">Lock Screen</string>
    <string name="set_as_both">Set As Both</string>
    <string name="set_wallpaper">Set</string>
    <string name="timeout_error">Process timed out due to slow connection</string>
    <string name="downloaded_to_gallery">Downloaded to gallery</string>
    <string name="wallpaper_has_been_set">Wallpaper has been set</string>
    <string name="on">On</string>
    <string name="downloading">Downloading…</string>
    <string name="setting_wallpaper">Setting Wallpaper</string>
    <string name="write_storage_rationale">Storage Permission required</string>
    <string name="categories">Categories</string>
    <string name="vp_search">Search</string>
    <string name="vp_edit">Edit</string>
    <string name="vp_rate">Rate</string>
    <string name="vp_share">Share</string>
    <string name="choose_from_gallery">Choose From Gallery</string>
    <string name="take_a_photo">Take A Photo</string>
    <string name="choose_an_action">Choose An Action</string>
    <string name="allow">Allow</string>
    <string name="permission_required">Permission Required</string>
    <string name="intent_package">package</string>
    <string name="image_intent">image/*</string>
    <string name="image_uri">IMG_</string>
    <string name="suffix_uri">.jpg</string>
    <string name="search_and_download"><![CDATA[Search & Download free wallpapers]]></string>
    <string name="edit_photo">Edit a photo</string>
    <string name="rate_app">Rate PIXAR on PlayStore</string>
    <string name="share_app">Share PIXAR with your peers</string>
    <string name="nature">Nature</string>
    <string name="patterns">Patterns</string>
    <string name="wildlife">Wildlife</string>
    <string name="sports">Sports</string>
    <string name="food">Food</string>
    <string name="cities">Cities</string>
    <string name="interstitial_ad_id">ca-app-pub-8685469236021524/4029183960</string>
    <string name="banner_id_1">ca-app-pub-8685469236021524/3577757829</string>
    <string name="banner_id_2">ca-app-pub-8685469236021524/5561402263</string>
</resources>