<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBlueLight"
    android:padding="@dimen/_4sdp"
    tools:context=".bottomsheets.WallpaperBottomSheetFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_bold"
                android:padding="@dimen/_4sdp"
                android:text="@string/choose_action"
                android:textAlignment="center"
                android:textColor="@color/colorTextSecondary"
                android:textSize="@dimen/_18ssp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radioButtonHome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:fontFamily="@font/ubuntu_medium"
                    android:text="@string/home_screen"
                    android:textColor="@color/colorTextSecondary"
                    android:textSize="@dimen/_14ssp"
                    app:buttonTint="@color/colorYellow" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radioButtonLock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu_medium"
                    android:text="@string/lock_screen"
                    android:textColor="@color/colorTextSecondary"
                    android:textSize="@dimen/_14ssp"
                    app:buttonTint="@color/colorYellow" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radioButtonBoth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu_medium"
                    android:text="@string/set_as_both"
                    android:textColor="@color/colorTextSecondary"
                    android:textSize="@dimen/_14ssp"
                    app:buttonTint="@color/colorYellow" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_48sdp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSetWallpaper"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_4sdp"
                android:layout_weight="1"
                android:fontFamily="@font/ubuntu_bold"
                android:paddingTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:text="@string/set_wallpaper"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_14ssp"
                app:backgroundTint="@color/colorYellow"
                app:cornerRadius="@dimen/_8sdp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_4sdp"
                android:layout_weight="1"
                android:fontFamily="@font/ubuntu_bold"
                android:paddingTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:text="@string/cancel"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_14ssp"
                app:backgroundTint="@color/colorThemeExtra"
                app:cornerRadius="@dimen/_8sdp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>