<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBlueLight"
    android:padding="@dimen/_4sdp"
    tools:context=".bottomsheets.DownloadBottomSheetFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_bold"
                android:padding="@dimen/_4sdp"
                android:text="@string/pick_quality"
                android:textAlignment="center"
                android:textColor="@color/colorTextSecondary"
                android:textSize="@dimen/_18ssp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radioButtonNormal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:fontFamily="@font/ubuntu_medium"
                    android:text="@string/normal_resolution"
                    android:textColor="@color/colorTextSecondary"
                    android:textSize="@dimen/_14ssp"
                    app:buttonTint="@color/colorYellow" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radioButtonHigh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu_medium"
                    android:text="@string/high_resolution"
                    android:textColor="@color/colorTextSecondary"
                    android:textSize="@dimen/_14ssp"
                    app:buttonTint="@color/colorYellow" />

            </RadioGroup>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonDownload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_32sdp"
            android:layout_marginEnd="@dimen/_32sdp"
            android:fontFamily="@font/ubuntu_bold"
            android:paddingTop="@dimen/_8sdp"
            android:paddingBottom="@dimen/_8sdp"
            android:text="@string/download"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_12ssp"
            app:backgroundTint="@color/colorYellow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonDownloadCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_32sdp"
            android:layout_marginEnd="@dimen/_32sdp"
            android:layout_marginBottom="@dimen/_42sdp"
            android:fontFamily="@font/ubuntu_bold"
            android:paddingTop="@dimen/_8sdp"
            android:paddingBottom="@dimen/_8sdp"
            android:text="@string/cancel"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_12ssp"
            app:backgroundTint="@color/colorThemeExtra"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonDownload" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>