<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBlueLight"
    android:padding="@dimen/_4sdp"
    tools:context=".bottomsheets.ImageBottomSheetFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="@dimen/zero_dimen"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_48sdp"
            android:orientation="vertical"
            android:padding="@dimen/_8sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_bold"
                android:padding="@dimen/_4sdp"
                android:text="@string/choose_an_action"
                android:textAlignment="center"
                android:textColor="@color/colorTextSecondary"
                android:textSize="@dimen/_18ssp" />

            <TextView
                android:id="@+id/textImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:drawablePadding="@dimen/_8sdp"
                android:focusable="true"
                android:fontFamily="@font/ubuntu_medium"
                android:gravity="center_vertical"
                android:paddingTop="@dimen/_4sdp"
                android:paddingBottom="@dimen/_4sdp"
                android:text="@string/choose_from_gallery"
                android:textColor="@color/colorTextSecondary"
                android:textSize="@dimen/_14ssp"
                app:drawableStartCompat="@drawable/ic_image"
                app:drawableTint="@color/colorTextSecondary" />

            <TextView
                android:id="@+id/textCamera"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:drawablePadding="@dimen/_8sdp"
                android:focusable="true"
                android:fontFamily="@font/ubuntu_medium"
                android:gravity="center_vertical"
                android:paddingTop="@dimen/_4sdp"
                android:paddingBottom="@dimen/_4sdp"
                android:text="@string/take_a_photo"
                android:textColor="@color/colorTextSecondary"
                android:textSize="@dimen/_14ssp"
                app:drawableStartCompat="@drawable/ic_camera"
                app:drawableTint="@color/colorTextSecondary" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>